--- a/app/src/client/index.jade
+++ b/app/src/client/index.jade
@@ -1,7 +1,7 @@
 extends ./layout
 block contents
   include ./views/header
-  .contents.contents-video.bg-pale-red
+  .contents.contents-video.bg-vivid-orange
     video(src="./assets/video/bbqx.mp4",loop,autoplay)
   .contents.contents-tldr.bg-pale-blue
     section.container
