--- a/app/src/client/assets/stylesheets/lib/_variables.sass
+++ b/app/src/client/assets/stylesheets/lib/_variables.sass
@@ -2,4 +2,5 @@ $pale-grey: #f9f9f9
 $pale-blue: #f2fcff
 $pale-red: #fff2fc
 $pale-green: #fcfff2
-$vivid-orange: #ff8600
+$vivid-orange: #f98d62
+$dark-grey: #404040
