--- a/app/src/client/assets/stylesheets/lib/_zurui.sass
+++ b/app/src/client/assets/stylesheets/lib/_zurui.sass
@@ -55,3 +55,14 @@
   background: $pale-green
 .bg-vivid-orange
   background: $vivid-orange
+.bg-dark-grey
+  background: $dark-grey
+
+.margin-top-20
+  margin-top: 20px
+.margin-top-30
+  margin-top: 30px
+.margin-top-40
+  margin-top: 40px
+.margin-top-60
+  margin-top: 60px
