--- a/app/src/client/layout.jade
+++ b/app/src/client/layout.jade
@@ -2,9 +2,9 @@ doctype
 html(ng-app="bbqx")
   head
     meta(charset="UTF-8")
-    title 夏空の下、お肉を食べながらエンジニアリングを語ろう | BBQX
+    title「バーベキュー」×「勉強会」で出会い、ひらめく | BBQX
     link(rel='stylesheet', href='/assets/vendor/fontawesome/css/font-awesome.min.css')
-    link(rel='stylesheet', href='/assets/stylesheets/core.css')
+    link(rel='stylesheet', href='/assets/stylesheets/core.css?assets=1Qnsde')
     meta(name="viewport", content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1")
 
   body
