--- a/app/src/client/assets/stylesheets/core.sass
+++ b/app/src/client/assets/stylesheets/core.sass
@@ -18,7 +18,7 @@
   .information
     margin-top: 14px
 .contents
-  padding: 4em
+  padding: 4em 0
   .title
     border-bottom: solid 3px
   .longtext
@@ -28,12 +28,6 @@
     video
       min-width: 100%
       opacity: 0.6
-    .overray
-      margin: 0 auto
-      position: absolute
-      z-index: 100
-      width: 100%
-      top: 70%
   &.contents-tldr
     .point
       margin-top: 4em
@@ -43,3 +37,11 @@
     border-top: 3px solid $vivid-orange
   &.contents-recruit
     border: 60px solid $vivid-orange
+.overray-container
+  position: relative
+  .overray
+    margin: 0 auto
+    position: absolute
+    z-index: 100
+    width: 100%
+    bottom: 20px
