--- a/app/src/client/assets/stylesheets/core.sass
+++ b/app/src/client/assets/stylesheets/core.sass
@@ -3,7 +3,7 @@
 @import lib/_variables
 
 #global-header
-  position: fixed
+  position: relative
   top: 0
   left: 0
   width: 100%
@@ -36,7 +36,7 @@
   &.contents-information
     border-top: 3px solid $vivid-orange
   &.contents-recruit
-    border: 60px solid $vivid-orange
+    border: 4px solid $vivid-orange
 .overray-container
   position: relative
   .overray
@@ -45,3 +45,14 @@
     z-index: 100
     width: 100%
     bottom: 20px
+.dummy-logo-set
+  margin: 0 auto
+  width: 100px
+  .dummy-logo
+    width: 100px
+    height: 100px
+    border: solid 1px #fff
+    +border-radius(3px)
+    font-weight: bold
+    font-size: 70px
+    color: #fff
