--- a/app/src/client/assets/stylesheets/lib/_zurui.sass
+++ b/app/src/client/assets/stylesheets/lib/_zurui.sass
@@ -57,6 +57,8 @@
   background: $vivid-orange
 .bg-dark-grey
   background: $dark-grey
+.text-white
+  color: #fff
 
 .margin-top-20
   margin-top: 20px
