--- a/app/src/client/index.jade
+++ b/app/src/client/index.jade
@@ -1,23 +1,24 @@
 extends ./layout
 block contents
   include ./views/header
-  .contents.contents-video.bg-vivid-orange.hidden-xs.overray-container
-    video(src="./assets/video/bbqx.mp4",loop,autoplay)
-    .overray
-      h1(style="color:#fff;font-weight:bold;") 
-        |「バーベキュー」×「勉強会」×「京都」で
-        br
-        |　出会い、ひらめく
+  .contents.bg-vivid-orange.text-center.text-white
+    section.container
+      row
+        .col-xs-12.col-sm-8.col-sm-offset-2
+          .dummy-logo-set
+            .dummy-logo H
+          p.lead.margin-top-40
+            b Hibachi Hack
+            | は、関西で活躍しているIT/WEB系エンジニアが
+            | 京都の土手に火鉢(七輪)とラップトップを持ち寄って、
+            | のんびり語る会です。
   .contents.contents-tldr
     section.container
-      .row.text-center.contents-header
-        h3 BBQX(バーベッキュス)とは
-      .row.contents-body
-        .col-xs-12.col-sm-9.col-sm-offset-2
-          p.longtext.small
-            | BBQXとはエイッジェクスコミュニケーションズ社員の有志が集まり結成した
-            |「肉とビールとエンジニアを愛する会」の会員が関西で活躍されているエンジニアのみなさまと
-            | BBQをしながら、勉強会をしようという企画です。
+      .row.contents-head.text-center
+        h2 炭火で炙れば、肉も話もおいしくなる
+        p
+          | 何でもかんでも自動化してしまう時代だから、
+          | ローテクなものに触れる時間が重要だと思うんです。
       .row.contents-body
         .col-xs-12.col-sm-4
           .point.text-center
@@ -28,7 +29,6 @@ block contents
               | まずは火起こしから。おいしいお肉が
               br
               | 焼けるように頑張ってください。
-
         .col-xs-12.col-sm-4
           .point.text-center
             .symbol.fire-symbol
@@ -50,54 +50,16 @@ block contents
   .contents.contents-information
     section.container
       .row.text-center.contents-header
-        h3 開催情報
+        h3 次回の開催情報
       .row.contents-body.margin-top-60
         .col-xs-12.col-sm-5.col-sm-offset-1
           dl.dl-horizontal
             dt 日時
-            dd 2014/07/21(月) 12:00 - 16:00
+            dd 2014/07/21(月) 11:00 - 15:00
         .col-xs-12.col-sm-5
           dl.dl-horizontal
-            dt 会場
-            dd IN THE GREEN(京都 北山)
-            dd
-              a(href="http://www.inthegreen.jp/",target="_blank") (店舗サイト)
-      .row.contents-body
-        .col-xs-12.col-sm-8.col-sm-offset-2
-          p.lead.text-center スケジュール
-          table.table
-            thead
-              tr
-                td 時間
-                td 内容
-            tbody
-              tr
-                td 12:00
-                td 開会宣言
-              tr
-                td 12:30
-                td [基調講演] 京都で働くということについて
-              tr
-                td 13:00
-                td [ゲーム] 高級食材争奪！エンジニアクイズ大会
-              tr
-                td 14:00
-                td [発表] vim 〜世界でひとつの彼女
-              tr
-                td 14:30
-                td [発表] 入社からこれまでの失敗史
-              tr
-                td 15:00
-                td [LT] 暗黙知を知らない組織の作り方
-              tr
-                td 15:20
-                td [LT] 障害が発生したら担当者を電話で呼び出す監視システムの作り方
-              tr
-                td 15:40
-                td [LT] 妻というインフラの運用ノウハウ、障害報告
-              tr
-                td 16:00
-                td 閉会宣言
+            dt 場所
+            dd 土手(詳細検討中)
       .row.contents-body.margin-top-60
         .col-xs-12.col-sm-8.col-sm-offset-2
           a.btn.btn-block.btn-info(href="http://connpass.com/event/7571/",target="_blank") お申込みはこちらから(別サイトに移動します)
@@ -112,8 +74,9 @@ block contents
       .row.contents-body.margin-top-40
         .col-xs-12.col-sm-10.col-sm-offset-1
           p.longtext
-            | エイジェックスコミュニケーションズはエンジニア採用を積極的に行っています。
-            | (ここだけの話、エンジニアが全然足りていません。クライアントからたくさんの開発案件をいただいていますが、待ってもらっています。)
+            | 主催者(
+            a(href="https://twitter.com/toyamarinyon", target="_blank") @toyamarinyon
+            | )の所属している株式会社エイジェックスコミュニケーションズはエンジニア採用を積極的に行っています。
           p.longtext
             | 興味のある方は、是非この勉強会に参加していただき、社員と話してみてください。
             | また、今すぐ話を聞いてみたい方は、以下の採用特設ページからエントリーください。
