--- a/app/src/client/layout.jade
+++ b/app/src/client/layout.jade
@@ -2,7 +2,7 @@ doctype
 html(ng-app="bbqx")
   head
     meta(charset="UTF-8")
-    title「バーベキュー」×「勉強会」で出会い、ひらめく | BBQX
+    title Hibachi Hack | 火鉢を囲んでまったり話しましょう
     link(rel='stylesheet', href='/assets/vendor/fontawesome/css/font-awesome.min.css')
     link(rel='stylesheet', href='/assets/stylesheets/core.css?assets=1Qnsde')
     meta(name="viewport", content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1")
