--- a/app/src/client/index.jade
+++ b/app/src/client/index.jade
@@ -9,21 +9,18 @@ block contents
             .dummy-logo H
           p.lead.margin-top-40
             b Hibachi Hack
-            | は、関西で活躍しているIT/WEB系エンジニアが
-            | 京都の土手に火鉢(七輪)とラップトップを持ち寄って、
-            | のんびり語る会です。
+            | は、関西で活躍しているIT/WEB系エンジニアが京都の土手に火鉢(七輪)とラップトップを持ち寄って、のんびり語る会です。
   .contents.contents-tldr
     section.container
       .row.contents-head.text-center
-        h2 炭火で炙れば、肉も話もおいしくなる
+        h2 炭火で炙れば、肉も話もうまくなる
         p
-          | 何でもかんでも自動化してしまう時代だから、
-          | ローテクなものに触れる時間が重要だと思うんです。
+          | 何でもかんでも自動化してしまう時代に、ローテクなものに目を向けてみませんか？
       .row.contents-body
         .col-xs-12.col-sm-4
           .point.text-center
             .symbol.fire-symbol
-              img(src="/assets/images/grill.png")
+              img(src="/assets/images/hibachi.png")
             h4.margin-top-30 焼いて
             p.small
               | まずは火起こしから。おいしいお肉が
@@ -52,20 +49,21 @@ block contents
       .row.text-center.contents-header
         h3 次回の開催情報
       .row.contents-body.margin-top-60
-        .col-xs-12.col-sm-5.col-sm-offset-1
+        .col-xs-12
           dl.dl-horizontal
             dt 日時
-            dd 2014/07/21(月) 11:00 - 15:00
-        .col-xs-12.col-sm-5
-          dl.dl-horizontal
+            dd 2014/07/21(月) 12:00 - 15:00
             dt 場所
-            dd 土手(詳細検討中)
-      .row.contents-body.margin-top-60
-        .col-xs-12.col-sm-8.col-sm-offset-2
-          a.btn.btn-block.btn-info(href="http://connpass.com/event/7571/",target="_blank") お申込みはこちらから(別サイトに移動します)
+            dd 阪急松尾大社駅周辺の川原
+            dt お申込み方法
+            dd
+              | 主催者(
+              a(href="https://twitter.com/toyamarinyon", target="_blank") @toyamarinyon
+              | )にDMかメンションかしてください
 
-  .contents.contents-recruit
-    section
+
+  .contents.contents-recruit.bg-pale-grey
+    section.container
       .row.text-center.contents-header.text-center
         h3 転職活動中の方へ！！
       .row.contents-body.text-center.margin-top-40
@@ -78,7 +76,7 @@ block contents
             a(href="https://twitter.com/toyamarinyon", target="_blank") @toyamarinyon
             | )の所属している株式会社エイジェックスコミュニケーションズはエンジニア採用を積極的に行っています。
           p.longtext
-            | 興味のある方は、是非この勉強会に参加していただき、社員と話してみてください。
+            | 興味のある方は、是非この会に参加していただき、社員と話してみてください。
             | また、今すぐ話を聞いてみたい方は、以下の採用特設ページからエントリーください。
       .row.contents-body.margin-top-60
         .col-xs-12.col-sm-8.col-sm-offset-2
