--- a/app/src/client/views/header.jade
+++ b/app/src/client/views/header.jade
@@ -2,5 +2,6 @@
   .container
     .row
       .col-md-5
-        .page-title Hibachi Hack
+        .page-title
+          img(src="/assets/images/logo-fire.png")
 
